# escola-api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  env-template  local.Dockerfile  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: deploy.yml
admin/: admin.py  admin_site.py
app/: database.py  main.py
app/core/: config.py
migrations/: env.py
migrations/versions/: 1bec38b7baf7_add_table_titulo_e_professor.py  58156ec7c26f_adicionar_tabela_aluno.py
start_point/: schemas.py
start_point/api/: v1.py
start_point/models/: models.py
start_point/repositories/: aluno_repository.py  professor_repository.py  titulo_repository.py
